# trusted-repos-policy

./: .gitignore  Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml  questions-ui.yml
.github/workflows/: release.yml
src/: image.rs  lib.rs  settings.rs  validating_resource.rs  validation.rs  validation_result.rs
test_data/: ingress_creation.json  pod_creation.json  pod_creation_implicit_latest.json  pod_creation_latest.json
