[package]
name = "trusted-repos-policy"
version = "0.2.0"
authors = ["Kubewarden Developers <kubewarden@suse.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kubewarden-policy-sdk = { version = "0.11.3", default-features = false }
lazy_static = "1.5"
oci-spec = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[dev-dependencies]
rstest = "0.24"
