[package]
name = "trusted-repos-policy"
version = "2.0.4"
authors = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kubewarden-policy-sdk = { version = "0.15.0", default-features = false }
lazy_static = "1.5"
oci-spec = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[dev-dependencies]
rstest = "0.26"
